template/820_myArray_out.txt
820_myArray.cpp: In function ‘void f1()’:
820_myArray.cpp:123:11: error: missing template arguments before ‘z’
  123 |   myArray z;
      |           ^
820_myArray.cpp:124:10: error: ‘z’ was not declared in this scope
  124 |   cin >> z ;
      |          ^
template$ ^C
